@startuml
!theme materia


' ======================================================
'     POSTER MODE — SUPER MASSIVE A0 CONFIGURATION
' ======================================================
skinparam backgroundColor #000000
skinparam defaultFontName "Consolas"
skinparam defaultFontColor #ffffff
skinparam defaultFontSize 500          ' 🔥 FONT SUPER BESAR


' ====== TABLE SIZE (SUPER BIG) ======
skinparam Padding 200
skinparam HorizontalPadding 280
skinparam VerticalPadding 260

' ====== SPACING (SUPER WIDE) ======
skinparam Ranksep 520
skinparam Nodesep 420


' ====== ENTITY STYLE ======
skinparam entity {
  BackgroundColor #263238
  FontColor #ffdd55
  BorderThickness 6
  RoundCorner 28
}
skinparam entityAttributeFontColor #ffdd55
skinparam entityAttributeFontSize 500
skinparam entityBorderColor #00eaff

skinparam arrow {
  Color #ffffff
  Thickness 45      ' Garis besar agar terbaca dari jauh
}

top to bottom direction



' ======================================================
' ROW 1 — STORE + PROFIL
' ======================================================
entity "store" as store {
  *id_store : INT <<PK>>
  --
  nama_store : VARCHAR(100)
  alamat_store : TEXT
  created_at : DATETIME
}

entity "profil" as profil {
  *id_profil : INT <<PK>>
  --
  nama_barbershop : VARCHAR(150)
  logo : VARCHAR(255)
  telepon : VARCHAR(20)
  instagram : VARCHAR(100)
  tiktok : VARCHAR(100)
  created_at : DATETIME
}

store -[hidden]-> profil



' ======================================================
' ROW 2 — USERS | KASIR | CAPSTER
' ======================================================
entity "users" as users {
  *id_user : INT <<PK>>
  --
  nama_user : VARCHAR(100)
  username : VARCHAR(50)
  password : VARCHAR(255)
  role : ENUM
  id_store : INT <<FK>>
  id_capster : INT <<FK>>
  id_kasir : INT <<FK>>
  created_at : DATETIME
}

entity "kasir" as kasir {
  *id_kasir : INT <<PK>>
  --
  nama_kasir : VARCHAR(100)
  id_store : INT <<FK>>
  id_user : INT <<FK>>
  status : ENUM
  created_at : DATETIME
}

entity "capster" as capster {
  *id_capster : INT <<PK>>
  --
  nama_capster : VARCHAR(100)
  id_store : INT <<FK>>
  id_user : INT <<FK>>
  status : ENUM
  created_at : DATETIME
}

store -- users : bekerja_di
store -- kasir : memiliki
store -- capster : memiliki

users -- kasir : terhubung
users -- capster : terhubung

users -[hidden]-> kasir
kasir -[hidden]-> capster



' ======================================================
' ROW 3 — TRANSAKSI + PENGELUARAN + STRUK
' ======================================================
entity "transaksi" as transaksi {
  *id_transaksi : INT <<PK>>
  --
  id_store : INT <<FK>>
  id_user : INT <<FK>>
  tipe_transaksi : ENUM
  metode_bayar : VARCHAR(20)
  subtotal : DECIMAL
  jumlah_bayar : DECIMAL
  kembalian : DECIMAL
  created_at : DATETIME
}

entity "pengeluaran" as pengeluaran {
  *id_pengeluaran : INT <<PK>>
  --
  id_store : INT <<FK>>
  id_user : INT <<FK>>
  kategori : VARCHAR(100)
  deskripsi : TEXT
  jumlah : DECIMAL
  tanggal : DATE
  bukti_path : VARCHAR(255)
  created_at : DATETIME
}

entity "struk" as struk {
  *id_struk : INT <<PK>>
  --
  id_transaksi : INT <<FK>>
  nomor_struk : VARCHAR(30)
  created_at : DATETIME
}

store -- transaksi : melayani_transaksi
store -- pengeluaran : memiliki_pengeluaran
users -- transaksi : dicatat_oleh
users -- pengeluaran : mencatat
transaksi ||-- struk : memiliki_struk

transaksi -[hidden]-> pengeluaran
pengeluaran -[hidden]-> struk



' ======================================================
' ROW 4 — DETAIL SERVICE + DETAIL PRODUK
' ======================================================
entity "transaksi_service_detail" as transaksi_service_detail {
  *id_detail : INT <<PK>>
  --
  id_transaksi : INT <<FK>>
  id_pricelist : INT <<FK>>
  id_capster : INT <<FK>>
  harga : DECIMAL
  persentase_capster : DECIMAL
  komisi_capster : DECIMAL
  created_at : DATETIME
}

entity "transaksi_produk_detail" as transaksi_produk_detail {
  *id_detail : INT <<PK>>
  --
  id_transaksi : INT <<FK>>
  id_produk : INT <<FK>>
  jumlah : INT
  harga_awal : DECIMAL
  harga_jual : DECIMAL
  total_penjualan : DECIMAL
  total_modal : DECIMAL
  laba_rugi : DECIMAL
  created_at : DATETIME
}

transaksi -- transaksi_service_detail : detail_service
transaksi -- transaksi_produk_detail : detail_produk
capster -- transaksi_service_detail : melayani

transaksi_service_detail -[hidden]-> transaksi_produk_detail



' ======================================================
' ROW 5 — PRODUK + PRICELIST + STOK PRODUK
' ======================================================
entity "produk" as produk {
  *id_produk : INT <<PK>>
  --
  nama_produk : VARCHAR(100)
  harga_awal : DECIMAL
  harga_jual : DECIMAL
  created_at : DATETIME
}

entity "pricelist" as pricelist {
  *id_pricelist : INT <<PK>>
  --
  service : VARCHAR(100)
  keterangan : TEXT
  harga : DECIMAL
  created_at : DATETIME
}

entity "stok_produk" as stok_produk {
  *id_stok : INT <<PK>>
  --
  id_produk : INT <<FK>>
  id_store : INT <<FK>>
  jumlah_stok : INT
  stok_akhir : INT
  updated_at : DATETIME
}

produk -- stok_produk : tersedia_di
produk -- transaksi_produk_detail : terjual_dalam
pricelist -- transaksi_service_detail : digunakan_pada

produk -[hidden]-> pricelist
pricelist -[hidden]-> stok_produk



' ======================================================
' ROW 6 — KOMISI | GAJI | BONUS | KASBON | POTONGAN
' ======================================================
entity "komisi_setting" as komisi_setting {
  *id_setting : INT <<PK>>
  --
  id_capster : INT <<FK>>
  persentase_capster : DECIMAL
  updated_at : DATETIME
}

entity "gaji_setting" as gaji_setting {
  *id_gaji_setting : INT <<PK>>
  --
  id_capster : INT <<FK>>
  id_kasir : INT <<FK>>
  id_user : INT <<FK>>
  gaji_pokok : DECIMAL
  periode : ENUM
  updated_at : DATETIME
}

entity "bonus" as bonus {
  *id_bonus : INT <<PK>>
  --
  id_capster : INT <<FK>>
  id_kasir : INT <<FK>>
  id_user : INT <<FK>>
  judul_bonus : VARCHAR(100)
  jumlah : DECIMAL
  keterangan : TEXT
  tanggal_diberikan : DATE
  periode : CHAR(7)
  status : ENUM
  created_at : DATETIME
}

entity "kasbon" as kasbon {
  *id_kasbon : INT <<PK>>
  --
  id_capster : INT <<FK>>
  id_kasir : INT <<FK>>
  jumlah_total : DECIMAL
  sisa_kasbon : DECIMAL
  jumlah_cicilan : INT
  cicilan_terbayar : INT
  keterangan : VARCHAR(255)
  status : ENUM
  tanggal_pinjam : DATE
  created_at : DATETIME
  updated_at : DATETIME
}

entity "potongan_kasbon" as potongan_kasbon {
  *id_potongan : INT <<PK>>
  --
  id_kasbon : INT <<FK>>
  id_capster : INT <<FK>>
  id_kasir : INT <<FK>>
  periode : CHAR(7)
  jumlah_potongan : DECIMAL
  keterangan : VARCHAR(255)
  tanggal_potong : DATE
  tipe_potongan : ENUM
}

capster -- komisi_setting : memiliki_komisi
capster -- gaji_setting : memiliki_gaji
capster -- bonus : mendapat_bonus
capster -- kasbon : meminjam
capster -- potongan_kasbon : dipotong

kasir -- bonus : memberikan
kasir -- kasbon : mencatat
kasir -- potongan_kasbon : mencatat_potongan

kasbon -- potongan_kasbon : memiliki_potongan

komisi_setting -[hidden]-> gaji_setting
gaji_setting -[hidden]-> bonus
bonus -[hidden]-> kasbon
kasbon -[hidden]-> potongan_kasbon

@enduml
